--- a/CoolBlue/App.xaml
+++ b/CoolBlue/App.xaml
@@ -2,9 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CoolBlue"
-             StartupUri="MainWindow.xaml"
+             Startup="App_Startup"
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
          
     </Application.Resources>
+    <!--<Application.MainWindow>
+        <NavigationWindow Source="MainWindow.xaml" Visibility="Visible"></NavigationWindow>
+    </Application.MainWindow>-->
 </Application>
+
+
+
+
+
+
+
+<!--StartupUri="MainWindow.xaml"-->
